# litestar-nuxt-fullstack

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  app.code-workspace
.github/workflows/: backend-ci.yml  backend-tests.yml  frontend-build.yml  frontend-ci.yml  pre-commit.yml
app_api/: .containerignore  .gitignore  AGENTS.md  Containerfile  config.example.toml  justfile  pyproject.toml
app_api/app/: __init__.py  config.py  db.py  main.py
app_api/app/api/: __init__.py  health.py
app_api/app/api/accounts/: __init__.py  router.py
app_api/app/api/accounts/auth/: __init__.py  controllers.py  dtos.py  guards.py  permissions.py  security.py  services.py
app_api/app/api/accounts/permissions/: __init__.py  controllers.py  dtos.py  repositories.py  services.py
app_api/app/api/accounts/roles/: __init__.py  controllers.py  dtos.py  repositories.py  services.py
app_api/app/api/accounts/users/: __init__.py  controllers.py  dtos.py  repositories.py  services.py
app_api/app/models/: __init__.py  accounts.py
app_api/migrations/: env.py  script.py.mako
app_api/migrations/versions/: 20250810-1345_73393d61a2f9_add_permissions.py  20250810-1345_9967ec7d0829_init.py  73393d61a2f9_add_permissions.py  9967ec7d0829_init.py
app_api/scripts/: bootstrap_db.py  entrypoint.sh
app_api/tests/: __init__.py  conftest.py
app_api/tests/accounts/: conftest.py  test_auth.py  test_guards.py  test_permissions.py  test_roles.py  test_users.py
app_web/: .containerignore  AGENTS.md  Containerfile  README.md  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
app_web/app/assets/styles/: main.css
app_web/app/components/: ThemeToggler.vue
app_web/app/components/admin/: Table.vue
app_web/app/components/admin/role/: Form.vue  PermissionSelector.vue
app_web/app/components/admin/user/: Form.vue
app_web/app/components/base/: Header.vue
app_web/app/composables/: index.ts  useAPI.ts  useToastsWithDefaults.ts
app_web/app/composables/api/accounts/: useAuthApi.ts  (+3 more)
app_web/app/interfaces/: accounts.ts
app_web/app/layouts/: default.vue
app_web/app/middleware/: auth.global.ts
app_web/app/pages/: admin.vue  index.vue  loading.vue
app_web/app/pages/admin/: index.vue
app_web/app/pages/auth/: change-my-password.vue  login.vue
app_web/app/plugins/: api.ts
app_web/app/stores/: auth.ts  permissions.ts  preferences.ts  roles.ts  users.ts
app_web/app/utils/: index.ts
app_web/public/: critical.css  theme-init.js
app_web/server/api/auth/: login.post.ts  logout.post.ts  me.get.ts
app_web/server/api/proxy/: [...path].ts
deploy/: .gitignore  README.md  app-pod.kube  app-pod.yaml  app-secrets.example.yaml  app.network  build.sh
(+6 files in other folders)
