[project]
name = "app-backend"
version = "0.1.0"
description = "Backend API for full-stack application"
authors = []
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "advanced-alchemy[uuid]>=1.8.0",
    "asyncpg>=0.30.0",
    "litestar[standard,jwt,sqlalchemy,structlog]>=2.18.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pyrefly>=0.41.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.2.0",
    "pytest-databases[postgres]>=0.15.0",
    "pytest-pretty>=1.3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.0",
    "ty>=0.0.1a17",
]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["F", "W", "E", "I", "A", "B", "N"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.alembic]
script_location = "%(here)s/migrations"
file_template = "%%(year)d-%%(month).2d-%%(day).2d_%%(slug)s_%%(rev)s"
prepend_sys_path = ["."]
truncate_slug_length = 40
output_encoding = "utf-8"
