[project]
name = "app-api"
version = "0.1.0"
description = "Backend API for full-stack application"
authors = []
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "advanced-alchemy[uuid]>=1.8.0",
    "asyncpg>=0.30.0",
    "litestar[standard,jwt,sqlalchemy,structlog]>=2.18.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "sniffio>=1.3.1",
]

[dependency-groups]
dev = [
    "pyrefly>=0.42.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.2.0",
    "pytest-databases[postgres]>=0.15.0",
    "pytest-pretty>=1.3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.0",
    "ty>=0.0.1a17",
]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Conflicts with formatter
    "D203",    # Incompatible with D211 (no-blank-line-before-class)
    "D213",    # Incompatible with D212 (multi-line-summary-first-line)
]

[tool.ruff.lint.per-file-ignores]
"migrations/versions/*.py" = ["D", "N999"]
"tests/**/*.py" = ["PLC0415", "PLR2004", "S101", "S608"]
"app/api/**/controllers.py" = ["TC001", "TC002", "TC003"]
"app/models/*.py" = ["TC001", "TC002", "TC003"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.alembic]
script_location = "%(here)s/migrations"
file_template = "%%(year)d%%(month).2d%%(day).2d-%%(hour).2d%%(minute).2d_%%(rev)s_%%(slug)s"
prepend_sys_path = ["."]
truncate_slug_length = 40
output_encoding = "utf-8"
